--- a/Css/style.css
+++ b/Css/style.css
@@ -26,8 +26,8 @@
 
 }
 body{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background-color: var(--white);
     font-family: 'Lexend', sans-serif;
     font-family: 'Newsreader',sans-serif;
@@ -45,7 +45,9 @@ header{
      align-items: center; 
       
 }
-
+.header .container-imagen{
+    position: relative;
+}
 .btn-inicio{
     display: flex;
     justify-content: center;
@@ -103,14 +105,15 @@ header .container-buttons ul{
 }
 .contenedor{
     
-    width: 90%;
+    width: 85%;
     height: 10em;
     background-color: #ccc;
     border-radius: 15px;
     overflow: hidden;
-    margin: 2rem 2rem;
-    padding: 2rem 2rem;
+    margin: 1rem 1rem;
+    padding: 1rem 1rem;
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: justify;
     font-size: 1.5rem;
@@ -212,7 +215,7 @@ header .container-buttons ul{
     line-height: 150%; /* 1.5rem */
 }
 .linea{
-    width: 80rem;
+    width: 100%;
     height: 0.0625rem;
     background: #262626;
 }
@@ -273,8 +276,107 @@ header .container-buttons ul{
     border-radius: 6.25rem;
     background: #D98220;
 }
+#conteiner-buttons .barra {
+    background-color: white;
+    height: 4px;
+    width: 30px;
+    margin: 6px 0;
+    transition: 0.4s;
+    cursor: pointer;
+
+}
+
+
+
 
 /* .linea2{
     width: 0.0625rem;
     height: 1.3125rem;
 } */
+ 
+@media (max-width: 390px) {
+    .container-buttons,.btn-inicio {
+      display: none;
+    }
+    .header{
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;    
+
+    }
+   .comidas{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+
+   }
+    .promos , .contenedor{
+        flex-wrap: wrap;
+        
+    }
+    .section-servicios{
+        display: flex;
+        
+    }
+    .imagen {
+       display: flex;
+       align-items: center;
+       justify-content: center;
+    }
+
+    .buttons-container{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .contenedor-datos{
+        width: 100%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .container-derechos-politicas{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .buttons-container1{
+        display: flex;
+        flex-direction: row;
+
+    }
+    .estilo-politicas-terminos, .container-derechos-politicas,.derechos-reservados{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: justify;
+    }
+    
+  }
+  @media (max-width:768px ){
+    .buttons-container{
+        display: flex;
+        flex-direction: column;
+        
+    }
+   
+    .container-derechos-politicas{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .buttons-container1{
+        display: flex;
+        flex-direction: row;
+
+    }
+    .estilo-politicas-terminos, .container-derechos-politicas,.derechos-reservados{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: justify;
+    }
+  }
+  
