--- a/Css/style.css
+++ b/Css/style.css
@@ -149,9 +149,9 @@ header .container-buttons ul{
     border-radius: 1.875rem;
     text-align: center;
 
+
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-
 
 .map{
    
@@ -165,6 +165,19 @@ header .container-buttons ul{
     
 
 
+}
+.ubicacion-contacto{
+    display: flex;
+    padding: 1.125rem 1.63931rem 0rem 1.63931rem;
+    justify-content: center;
+    align-items: center;
+    color: var(--bastille);
+    text-transform: uppercase;
+    font-family: 'Lexend', sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 1.5rem */
 }
 
 .footer{
