--- a/Css/style.css
+++ b/Css/style.css
@@ -308,14 +308,18 @@ header .container-buttons ul{
 } */
  
 @media (max-width: 390px) {
-    .container-buttons,.btn-inicio {
+    .container-buttons,.btn-inicio .menu{
       display: none;
+        visibility:hidden;
+        
+        
     }
+    
     .header{
         
         display: flex;
         align-items: center;
-        justify-content: center;    
+        justify-content: flex-start;    
 
     }
    .comidas{
